syntax = "proto3";

package filehosting;

import "google/protobuf/empty.proto";

option go_package = "github.com/bruhabruh/file-hosting/pkg/filehosting";

service FileHosting {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc GetFile(FileId) returns (File);
  rpc GetFileMetadata(FileId) returns (FileMetadata);
  rpc GetFiles(google.protobuf.Empty) returns (Files);
}

message UploadFileRequest {
  string filename = 1;
  bytes content = 2;
  map<string, MetadataValue> metadata = 3;
  optional string contentType = 4;
  optional string duration = 5;
}

message UploadFileResponse {
  string url = 1;
  string id = 2;
}

message FileId {
  string id = 1;
}

message File {
  string filename = 1;
  bytes content = 2;
  string contentType = 3;
  map<string, MetadataValue> metadata = 4;
}

message FileMetadata {
  string id = 1;
  string name = 2;
  string mimeType = 3;
  string sha1 = 4;
  string createdAt = 5;
  string expiredAt = 6;
  optional string backupName = 7;
  map<string, MetadataValue> meta = 8;
}

message MetadataValue {
  repeated string values = 1;
}

message Files {
  repeated FileMetadata metadata = 1;
}
